# LawFirm-os-legal-knowledge-runtime

./: .ai-assets.json  .digital-asset-directory.yml  .gitignore  AGENTS.md  AI_FRONT_DOOR.md  AI_TABLE_OF_CONTENTS.md  AI_WORK_START_HERE.md  CLAUDE.md  DIGITAL_ASSET_DIRECTORY_HANDOFF.md  README.md  ci-test-manifest.json  contracts.lock.json  pyproject.toml  skill-agent-manifest.json
.ai/control/: governance-dependency-map-mirror.json
.digital-asset/: context-map.json  dad-integration.json  data-map.yaml  governance-map.yaml
.digital-asset/assets/: README.md
.digital-asset/exceptions/: .gitignore  README.md
.digital-asset/key-values/: change-log.jsonl  registry.json
.digital-asset/mail/: README.md
.digital-asset/skills/: checkout.json
.githooks/: pre-push  pre-push.ps1
config/: validation-runtime-policy.yaml
docs/: INTAKE_CONTEXT_BUNDLE_REVIEW.md  RESEARCH_DELTA_2026_AGENT_HARNESS_LESSONS.md  SHANNON_RETRIEVAL_COMPRESSION_AND_LEGAL_CONTEXT_BUNDLES.md  SKILL_AGENT_CONTROL_PLANE_INTEGRATION.md
examples/: synthetic_document_integrity_check.json  synthetic_legal_document_ingestion_manifest.json  synthetic_retrieval_eval_case.json
registry/: intake-context-bundle-review-registry.json
scripts/: run_full_pytest.py  validate_governance_dependency_map_mirror.py  validate_intake_context_bundle_review.py
tests/: conftest.py  test_governance_dependency_map_mirror.py  test_ingestion_preflight.py  test_intake_context_bundle_review.py  test_research_delta_helpers.py  test_source_grounding_artifacts.py  test_validation_runtime_policy.py
(+14 files in other folders)
