[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LawFirm-os-legal-knowledge-runtime"
version = "0.1.0"
description = "Local-first legal document ingestion and retrieval-context runtime for LawFirm OS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "jsonschema>=4.23,<5"]

[project.scripts]
lawfirm-os-legal-knowledge = "lawfirm_os_legal_knowledge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["lawfirm_os_legal_knowledge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
